--- a/shelter/pages/pets/pets.scss
+++ b/shelter/pages/pets/pets.scss
@@ -76,6 +76,22 @@ ul {
   align-items: center;
 }
 
+
+.move-logo {
+  position: relative;
+  justify-content: flex-end;
+   transition-duration: 1.0s;
+   transition: all 1s;
+   
+  }
+  
+  .up-logo {
+  z-index: 1500;
+  margin-right: 100px;
+  
+  }
+  
+
 .header__logo__title {
   margin: 0;
   padding: 0;
